<resources>
    <string name="app_name">ABTheme Showcase</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="app_label" translatable="false">ABT Showcase</string>
    <string name="app_logo" translatable="false">Amoled Black Theme logo</string>
    <string name="sventrapopizzimage" translatable="false">SventraPopizz\'s image</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Andrea De Michele</string>
    <string name="nav_header_subtitle" translatable="false">"@SventraPopizz"</string>
    <string name="username" translatable="false">"SventraPopizz"</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="similar_themes">Similar themes</string>
    <string name="try_again">Try again</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <string name="pickyourpoison">Pick your poison</string>


    <string name="lastUpdate_standard">Last update: 2019/05/13 for Telegram v5.3</string>
    <string name="lastUpdate_au">Last update: 2019/05/13 for Telegram v4.9</string>
    <string name="lastUpdate_cyanogen">Last update: 2019/05/13 for Telegram v4.9</string>
    <string name="lastUpdate_mint">Last update: 8/3/2018 for Telegram v4.9</string>
    <string name="lastUpdate_orange">Last update: 8/9/2018 for Telegram v4.9</string>
    <string name="lastUpdate_oxygen">Last update: 8/7/2018 for Telegram v4.9</string>
    <string name="lastUpdate_red">Last update: 8/7/2018 for Telegram v4.9</string>
    <string name="lastUpdate_saints">Last update: 7/26/2018 for Telegram v4.9</string>
    <string name="lastUpdate_inverted">Last update: 8/9/2018 for Telegram v4.9</string>
    <string name="lastUpdate_inverted_inferno">Last update: 8/8/2018 for Telegram v4.9</string>
    <string name="lastUpdate_aospex">Last update: 7/30/2018 for Telegram v4.9</string>
    <string name="lastUpdate_steam">Last update: 8/8/2018 for Telegram v4.9</string>
    <string name="lastUpdate_monster">Last update: 8/17/2018 for Telegram v4.9</string>
    <string name="lastUpdate_league">Last update: 8/17/2018 for Telegram v4.9</string>
    <string name="lastUpdate_greenSunset">Last update: 8/24/2018 for Telegram v4.9</string>
    <string name="lastUpdate_pixelBlue">Last update: 9/2/2018 for Telegram v4.9</string>
    <string name="lastUpdate_crimson">Last update: 8/25/2018 for Telegram v4.9</string>
    <string name="lastUpdate_quetzal">Last update: 9/2/2018 for Telegram v4.9</string>
    <string name="lastUpdate_redleaf">Last update: 9/20/2018 for Telegram v4.9</string>
    <string name="lastUpdate_autumn">Last update: 2019/05/13 for Telegram v4.9</string>
    <string name="lastUpdate_phlox">Last update: 10/01/2018 for Telegram v4.9</string>
    <string name="lastUpdate_teal">Last update: 10/29/2018 for Telegram v4.9</string>
    <string name="lastUpdate_disrespect">Last update: 11/22/2018 for Telegram v4.9</string>
    <string name="lastUpdate_pixelBluex">Made for TGX BETA 0.21.2.1018</string>
    <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
    <string name="lastUpdate_tealx">Made for TGX BETA 0.21.3.1037</string>
    <string name="lastUpdate_invertedx">Made for TGX BETA 0.21.3.1037</string>
    <string name="lastUpdate_jamx">Made for TGX BETA 0.21.3.1037</string>

    <string name="version_standard">Download v5.3.0</string>
    <string name="version_au">Download v4.9.0</string>
    <string name="version_cyanogen">Download v4.9.1</string>
    <string name="version_mint">Download v4.9.0</string>
    <string name="version_orange">Download v4.9.0</string>
    <string name="version_oxygen">Download v4.9.1</string>
    <string name="version_red">Download v4.9.1</string>
    <string name="version_saints">Download v1.0b</string>
    <string name="version_inverted">Download v4.9.1</string>
    <string name="version_inverted_inferno">Download v4.9.0</string>
    <string name="version_aospex">Download v4.9.0</string>
    <string name="version_steam">Download v4.9.0</string>
    <string name="version_monster">Download v4.9.0</string>
    <string name="version_league">Download v4.9.0</string>
    <string name="version_greenSunset">Download v4.9.0</string>
    <string name="version_pixelBlue">Download v4.9.1</string>
    <string name="version_crimson">Download v4.9.0</string>
    <string name="version_quetzal">Download v4.9.0</string>
    <string name="version_redleaf">Download v4.9.0</string>
    <string name="version_autumn">Download v4.9.0</string>
    <string name="version_phlox">Download v4.9.0</string>
    <string name="version_teal">Download v4.9.1</string>
    <string name="version_disrespect">Download v4.9.0</string>
    <string name="version_pixelBluex">Download</string>
    <string name="version_infernox">Download</string>
    <string name="version_tealx">Download</string>
    <string name="version_invertedx">Download</string>
    <string name="version_jamx">Download</string>

    <string name="news1Date">2/2/2019</string>
    <string name="news1Content">Jam X\nReleased</string>
    <string name="pure_black_themes">Pure black themes</string>
    <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
    <string name="tgx_themes">Telegram X Themes</string>
    <string name="tgx_string_home">Themes made for Telegram X</string>
    <string name="tgx_string_page">Telegram X Beta might be needed!</string>
    <string name="inverted_themes">Inverted themes</string>
    <string name="inverted_string_home">White backgrounds</string>
    <string name="other_themes">Other themes</string>
    <string name="other_string_home">Anything else</string>
    <string name="other_string_navigation">All the other themes\nThese themes fit no previous category</string>
    <string name="quick_links">Quick links</string>
    <string name="open_channel">Open channel</string>
    <string name="contact_me">Contact me</string>
    <string name="view_all">View all</string>
    <string name="favorite_themes">Most downloaded</string>
    <string name="red_themes">Red themes</string>
    <string name="green_themes">Green themes</string>
    <string name="blue_themes">Blue themes</string>
    <string name="orange_themes">Orange themes</string>
    <string name="purple_themes">Purple themes</string>
    <string name="themes">Themes</string>
    <string name="take_me_home">TAKE ME HOME</string>
    <string name="bring_me_back">BACK</string>
    <string name="minussymbol"><![CDATA[<]]></string>
    <string name="pure_black_nav">"Pure\nBlack\nThemes"</string>
    <string name="other_themes_nav">"Other\nThemes"</string>

</resources>
