<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardNavBg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#0C131D"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardNavBack"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="openNavTGX"
        app:cardBackgroundColor="#16202A"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/navBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/minussymbol"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardNavPB"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="openNavPureBlack"
        app:cardBackgroundColor="#0C131D"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardNavBack">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/pure_black_nav"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardNavTGX"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="openNavTGX"
        app:cardBackgroundColor="#0C131D"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardNavPB"
        app:layout_constraintEnd_toStartOf="@+id/cardNavOthers"
        app:layout_constraintStart_toEndOf="@+id/cardNavPB">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="Telegram\nX"
                android:textColor="#fff"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardNavOthers"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="openNavOther"
        app:cardBackgroundColor="#0C131D"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardNavTGX"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/other_themes_nav"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>