<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="#050019"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cardViewHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="63dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewButton7"
                        android:layout_width="70dp"
                        android:layout_height="95dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:onClick="openPixelBlueX"
                        android:visibility="visible"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardViewButton6"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView13"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginStart="2dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginEnd="2dp"
                                android:layout_marginRight="2dp"
                                android:scaleType="fitCenter"
                                app:layout_constraintBottom_toTopOf="@+id/textView9"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_square_pixel" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/timeburnernormal"
                                android:gravity="center"
                                android:text="Pixel Blue"
                                android:textColor="@color/pixelBlue"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                                app:layout_constraintStart_toStartOf="@+id/imageView13"
                                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
                        </android.support.constraint.ConstraintLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardViewButton6"
                        android:layout_width="70dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:onClick="openInfernoX"
                        android:visibility="visible"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cardViewButton7"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView12"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginStart="2dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginEnd="2dp"
                                android:layout_marginRight="2dp"
                                android:scaleType="fitCenter"
                                app:layout_constraintBottom_toTopOf="@+id/textView8"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_square_inferno" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/timeburnernormal"
                                android:gravity="center"
                                android:text="Inferno"
                                android:textColor="@color/invInferno"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                                app:layout_constraintStart_toStartOf="@+id/imageView12"
                                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
                        </android.support.constraint.ConstraintLayout>

                    </android.support.v7.widget.CardView>

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewHome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="85dp"
                android:layout_marginLeft="85dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginBottom="8dp"
                android:onClick="openHome"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="12dp"
                app:cardElevation="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/timeburnernormal"
                        android:text="@string/take_me_home"
                        android:textColor="#000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/timeburnernormal"
                android:text="@string/themes"
                android:textColor="#fff"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView6" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="#6b6b6b"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="#000"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="63dp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="39dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/timeburnernormal"
                        android:text="@string/tgx_themes"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/timeburnernormal"
                        android:gravity="center"
                        android:maxEms="20"
                        android:singleLine="false"
                        android:text="@string/tgx_string_page"
                        android:textColor="#C3C3C3"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>